--- a/sbdemo01/src/main/resources/application.properties
+++ b/sbdemo01/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=30DBrootPW48
 spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.include-message=always
