--- a/sbdemo01/src/main/resources/application.properties
+++ b/sbdemo01/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.datasource.username=postgres
 spring.datasource.password=30DBrootPW48
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.include-message=always
+
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=hello
+spring.mail.password=hello
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
