--- a/sbdemo01/build.gradle
+++ b/sbdemo01/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+	implementation 'com.auth0:java-jwt:3.19.0'
 }
 
 tasks.named('test') {
