--- a/sbdemo01/build.gradle
+++ b/sbdemo01/build.gradle
@@ -31,12 +31,13 @@ dependencies {
 	implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
 	implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
 	runtimeOnly 'org.springframework.security:spring-security-core:5.6.2'
-	implementation 'org.springframework.boot:spring-boot-starter-mail:2.6.4'
+	implementation 'org.springframework.boot:spring-boot-starter-mail:2.6.5'
 	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 	implementation 'com.auth0:java-jwt:3.19.0'
+	testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
 tasks.named('test') {
