--- a/sbdemo01/src/main/resources/application.properties
+++ b/sbdemo01/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=30DBrootPW48
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.include-message=always
+spring.datasource.initialization-mode=always
 
 spring.mail.host=localhost
 spring.mail.port=1025
